--- a/Experiment/data_processing.ipynb
+++ b/Experiment/data_processing.ipynb
@@ -1697,6 +1697,590 @@
     "accuracy_best = accuracy_score(y_test_xgb_class, y_pred_best_xgb_class)\n",
     "print(f\"Tuned Model Accuracy: {accuracy_best:.2f}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Deployment\n",
+    "Now that the model is trained, we need to save it and deploy it for real-world use.\n",
+    "\n",
+    "1️. Save and Load the Model\n",
+    "To use the model later, save it as a .json or .pkl file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Save the model\n",
+    "with open(\"xgboost_model.pkl\", \"wb\") as file:\n",
+    "    pickle.dump(xgb_classifier, file)\n",
+    "\n",
+    "# Load the model\n",
+    "with open(\"xgboost_model.pkl\", \"rb\") as file:\n",
+    "    loaded_model = pickle.load(file)\n",
+    "\n",
+    "# Use the loaded model for predictions\n",
+    "y_pred_loaded = loaded_model.predict(X_test_class)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2️. Deploy with a Simple Flask API\n",
+    "\n",
+    "create an API to serve predictions using Flask.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install flask\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Create a app.py file:\n",
+    "\n",
+    "from flask import Flask, request, jsonify\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the trained model\n",
+    "with open(\"xgboost_model.pkl\", \"rb\") as file:\n",
+    "    model = pickle.load(file)\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route('/predict', methods=['POST'])\n",
+    "def predict():\n",
+    "    data = request.get_json()  # Expecting JSON input\n",
+    "    df = pd.DataFrame(data)  # Convert to DataFrame\n",
+    "    \n",
+    "    prediction = model.predict(df)\n",
+    "    \n",
+    "    return jsonify({'prediction': prediction.tolist()})\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 📌 Run the API:\n",
+    "\n",
+    "python app.py\n",
+    "\n",
+    "# This will create an API endpoint (/predict) that takes JSON input and returns predictions.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Deploy Using FastAPI (Optional)\n",
+    "If you need a faster API:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install fastapi uvicorn\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create main.py:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import FastAPI\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "with open(\"xgboost_model.pkl\", \"rb\") as file:\n",
+    "    model = pickle.load(file)\n",
+    "\n",
+    "@app.post(\"/predict\")\n",
+    "async def predict(data: dict):\n",
+    "    df = pd.DataFrame([data])\n",
+    "    prediction = model.predict(df)\n",
+    "    return {\"prediction\": prediction.tolist()}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uvicorn main:app --reload"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then test with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curl -X 'POST' 'http://127.0.0.1:8000/predict' -H 'Content-Type: application/json' -d '{\"Investment_Amounts\": 5000, \"Year\": 2024, \"Month\": 2, \"Quarter\": 1}'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "1️⃣ Optimize Feature Engineering (Try different transformations like scaling, log transformations, or PCA)\n",
+    "2️⃣ Deploy on Cloud (Use AWS Lambda, Google Cloud Run, or Azure Functions)\n",
+    "3️⃣ Automate Model Retraining (Use a scheduled job to update predictions)\n",
+    "4️⃣ Integrate with Tableau (Expose API for real-time updates in Tableau dashboards)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deploying XGBoost Model on the Cloud (AWS, GCP, or Azure)\n",
+    "To integrate XGBoost model with Tableau, we need to deploy it on the cloud so that Tableau can access predictions via an API. Below are the steps for deploying on AWS, but the process is similar for GCP or Azure.\n",
+    "\n",
+    "**Step 1: Choose a Cloud Service**\n",
+    "\n",
+    "- AWS Lambda + API Gateway (Serverless, cost-effective)\n",
+    "- AWS EC2 (More control, but requires manual setup)\n",
+    "- Google Cloud Run (Scalable serverless option)\n",
+    "- Azure Functions (Similar to AWS Lambda)\n",
+    "\n",
+    "For simplicity, let’s deploy on AWS using Flask and EC2. \n",
+    "\n",
+    "**Step 2: Prepare Your XGBoost Model**\n",
+    "Convert your trained XGBoost model into a deployable format.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Save the trained XGBoost model\n",
+    "with open(\"xgboost_model.pkl\", \"wb\") as file:\n",
+    "    pickle.dump(xgb_classifier, file)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 3: Set Up an AWS EC2 Instance**\n",
+    "\n",
+    "1️  Log in to AWS Console\n",
+    "\n",
+    "2️  Go to EC2 Dashboard → Click Launch Instance\n",
+    "\n",
+    "3️  Choose Ubuntu 22.04 as OS\n",
+    "\n",
+    "4️  Select t2.micro (Free-tier eligible)\n",
+    "\n",
+    "5️  Configure Security Group:\n",
+    "\n",
+    "    - Allow HTTP (port 80) and Custom TCP (port 5000)\n",
+    "    - Allow SSH (port 22) for remote access\n",
+    "\n",
+    "6️  Click Launch, then Connect to Instance via SSH:\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssh -i \"your-key.pem\" ubuntu@your-ec2-public-ip\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 4: Install Required Libraries**\n",
+    "\n",
+    "Once inside your EC2 instance, install dependencies:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo apt update && sudo apt upgrade -y\n",
+    "sudo apt install python3-pip -y\n",
+    "pip3 install flask pandas xgboost pickle-mixin\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 5: Deploy Flask API**\n",
+    "\n",
+    "Create a new file app.py and paste this code:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, request, jsonify\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the trained model\n",
+    "with open(\"xgboost_model.pkl\", \"rb\") as file:\n",
+    "    model = pickle.load(file)\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route('/predict', methods=['POST'])\n",
+    "def predict():\n",
+    "    data = request.get_json()  # Expecting JSON input\n",
+    "    df = pd.DataFrame(data)  # Convert to DataFrame\n",
+    "    prediction = model.predict(df)\n",
+    "    return jsonify({'prediction': prediction.tolist()})\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(host='0.0.0.0', port=5000, debug=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 6: Start API Server**\n",
+    "Run the Flask app:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python3 app.py\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your API is now running on  http://your-ec2-public-ip:5000/predict.\n",
+    "\n",
+    "**Step 7: Test the API**\n",
+    "\n",
+    "On your local machine, send a request using Postman or curl:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curl -X POST \"http://your-ec2-public-ip:5000/predict\" \\\n",
+    "     -H \"Content-Type: application/json\" \\\n",
+    "     -d '[{\"Investment_Amount\": 5000, \"Year\": 2024, \"Month\": 2, \"Quarter\": 1}]'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Expected Response:\n",
+    "\n",
+    "{\"prediction\": [1]}\n",
+    "\n",
+    "This means Investment_Amount = $5000 is predicted to be Profitable (1).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 8: Connect API to Tableau**\n",
+    "Now, integrate the API into Tableau.\n",
+    "\n",
+    "In Tableau\n",
+    "- Open Tableau Desktop\n",
+    "- Go to Data Source → Select \"Web Data Connector\"\n",
+    "- Use a simple Python Flask API connector or a Tableau Web Data Connector (WDC)\n",
+    "- Fetch predictions dynamically and display in a Tableau Dashboard\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Connecting Your XGBoost API to Tableau via Web Data Connector (WDC)\n",
+    "To display your XGBoost model’s predictions in Tableau, we need to create a Web Data Connector (WDC) that fetches data from the deployed Flask API on AWS.\n",
+    "\n",
+    "🔹 Step 1: Install Tableau Web Data Connector SDK\n",
+    "Since Tableau does not natively support REST APIs, we need a WDC (Web Data Connector) to interact with the Flask API.\n",
+    "\n",
+    "1️⃣ Install Tableau WDC SDK on your local machine:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "npm install -g tableauwdc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2️⃣ Clone the Web Data Connector SDK:\n",
+    "\n",
+    "git clone https://github.com/tableau/webdataconnector.git\n",
+    "cd webdataconnector/Examples\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 2: Create a New Web Data Connector (WDC)**\n",
+    "Inside the webdataconnector/Examples folder, create a new file flask_wdc.html.\n",
+    "\n",
+    "flask_wdc.html\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "    <title>XGBoost Predictions WDC</title>\n",
+    "    <script src=\"https://connectors.tableau.com/libs/tableauwdc-2.3.latest.js\"></script>\n",
+    "    <script>\n",
+    "        (function() {\n",
+    "            var myConnector = tableau.makeConnector();\n",
+    "\n",
+    "            myConnector.getSchema = function(schemaCallback) {\n",
+    "                var cols = [\n",
+    "                    { id: \"Investment_Amount\", alias: \"Investment Amount ($)\", dataType: tableau.dataTypeEnum.float },\n",
+    "                    { id: \"Year\", alias: \"Year\", dataType: tableau.dataTypeEnum.int },\n",
+    "                    { id: \"Month\", alias: \"Month\", dataType: tableau.dataTypeEnum.int },\n",
+    "                    { id: \"Quarter\", alias: \"Quarter\", dataType: tableau.dataTypeEnum.int },\n",
+    "                    { id: \"Prediction\", alias: \"Predicted Outcome\", dataType: tableau.dataTypeEnum.string }\n",
+    "                ];\n",
+    "\n",
+    "                var tableSchema = {\n",
+    "                    id: \"investmentPredictions\",\n",
+    "                    alias: \"Predictions from XGBoost Model\",\n",
+    "                    columns: cols\n",
+    "                };\n",
+    "\n",
+    "                schemaCallback([tableSchema]);\n",
+    "            };\n",
+    "\n",
+    "            myConnector.getData = function(table, doneCallback) {\n",
+    "                var apiUrl = \"http://your-ec2-public-ip:5000/predict\";\n",
+    "\n",
+    "                fetch(apiUrl, {\n",
+    "                    method: \"POST\",\n",
+    "                    headers: {\n",
+    "                        \"Content-Type\": \"application/json\"\n",
+    "                    },\n",
+    "                    body: JSON.stringify([\n",
+    "                        {\"Investment_Amount\": 10000, \"Year\": 2024, \"Month\": 2, \"Quarter\": 1},\n",
+    "                        {\"Investment_Amount\": 20000, \"Year\": 2024, \"Month\": 3, \"Quarter\": 1}\n",
+    "                    ])\n",
+    "                })\n",
+    "                .then(response => response.json())\n",
+    "                .then(data => {\n",
+    "                    var tableData = [];\n",
+    "                    for (var i = 0; i < data.prediction.length; i++) {\n",
+    "                        tableData.push({\n",
+    "                            \"Investment_Amount\": [10000, 20000][i],\n",
+    "                            \"Year\": 2024,\n",
+    "                            \"Month\": [2, 3][i],\n",
+    "                            \"Quarter\": 1,\n",
+    "                            \"Prediction\": data.prediction[i] === 1 ? \"Profitable\" : \"Risky\"\n",
+    "                        });\n",
+    "                    }\n",
+    "                    table.appendRows(tableData);\n",
+    "                    doneCallback();\n",
+    "                });\n",
+    "            };\n",
+    "\n",
+    "            tableau.registerConnector(myConnector);\n",
+    "\n",
+    "            document.querySelector(\"#submitButton\").addEventListener(\"click\", function() {\n",
+    "                tableau.connectionName = \"XGBoost Predictions Data\";\n",
+    "                tableau.submit();\n",
+    "            });\n",
+    "        })();\n",
+    "    </script>\n",
+    "</head>\n",
+    "<body>\n",
+    "    <h1>XGBoost Investment Predictions</h1>\n",
+    "    <button id=\"submitButton\">Get Data</button>\n",
+    "</body>\n",
+    "</html>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 3: Host WDC on a Local Web Server**\n",
+    "Since Tableau cannot directly open local .html files, we need to serve it using a simple Python HTTP server.\n",
+    "\n",
+    "1️⃣ Navigate to the directory where flask_wdc.html is located:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd /path/to/webdataconnector/Examples\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2️⃣ Start a local web server:\n",
+    "\n",
+    "python3 -m http.server 8000\n",
+    "\n",
+    "3️⃣ Your WDC is now available at:\n",
+    "\n",
+    " http://localhost:8000/flask_wdc.html\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 4: Connect to Tableau**\n",
+    "\n",
+    "1️⃣ Open Tableau Desktop\n",
+    "\n",
+    "2️⃣ Go to \"Connect\" → Select \"Web Data Connector\"\n",
+    "\n",
+    "3️⃣ Enter the URL:\n",
+    "\n",
+    "http://localhost:8000/flask_wdc.html\n",
+    "\n",
+    "4️⃣ Click \"Get Data\" and wait for predictions to load\n",
+    "\n",
+    "5️⃣ Click \"Update Extract\" and then go to Sheet 1 to create visualizations\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 5: Deploy WDC to AWS (Optional)**\n",
+    "To access the WDC remotely, deploy it to AWS S3 or an EC2 instance.\n",
+    "\n",
+    "1️⃣ Copy flask_wdc.html to your AWS EC2:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scp -i \"your-key.pem\" flask_wdc.html ubuntu@your-ec2-public-ip:/var/www/html/\n",
+    "\n",
+    "# 2️⃣ Access it in Tableau using:\n",
+    "\n",
+    "http://your-ec2-public-ip/flask_wdc.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Next Steps:**\n",
+    "- Fine-tune XGBoost model\n",
+    "- Deploy on AWS Lambda (for serverless API)\n",
+    "- Automate API requests with Tableau Extract Refresh\n"
+   ]
   }
  ],
  "metadata": {
